--- a/jdbc.demo/src/jdbc/config/config-mysql.properties
+++ b/jdbc.demo/src/jdbc/config/config-mysql.properties
@@ -1,4 +1,4 @@
-name=hr
-pwd=oracle
-url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-driver=oracle.jdbc.driver.OracleDriver
+name=root
+pwd=root
+url=?
+driver=?
